edited register + added authToken expiration
